syntax = "proto3";
package grpc;

option go_package = "https://github.com/lilkimo/INF343-Tarea-3/protoServidorBroker";

message MensajeLeia {
    string comando = 1;
    string nombre_planeta = 2;
    string nombre_ciudad = 3;
}

message ServidorRespuestaLeia {
    string numero_rebeldes = 1;
    repeated int32 vector = 2;
    string ip_servidor_fulcrum = 3;
}

service ConnToServidorFromBroker {
    rpc LeiaGetNumberRebelds (MensajeLeia) returns (ServidorRespuestaLeia);
}